# book-source-code

C++_Concurrency_in_action/: README.md  test.cpp
C++_Ruminations/: 04_chap.cpp  05_chap_surrogate.cpp
CPP_Primer_5th/: CMakeLists.txt  QueryResult.h  Sales_data.cc  Sales_data.h  Sales_item.h  TextQuery.cc  TextQuery.h  Version_test.h  build.sh  make_plural.h
CPP_Primer_5th/01_start/: 02_add.cc  03_whilecount.cc  04_for_ex.cc  05_mysum.cc  06_forcount.cc  07_item_io.cc  08_add_item.cc  09_add_item2.cc  10_avg_price.cc  11_occurs.cc  CMakeLists.txt
CPP_Primer_5th/02_variable_basic_type/: 01_compounddecls.cc  02_convs.cc  03_dbl_ptr.cc  04_decl-ex.cc  05_escape.cc  06_inits.cc  07_literals.cc  08_ref-ex.cc  09_Sales_data.cc  10_scope_levels.cc  11_unsigned.cc  CMakeLists.txt
CPP_Primer_5th/03_string_vector_array/: 01_add_using.cc  02_arrayScores.cc  03_cctype.cc  04_char_repl.cc  05_cstring_hdr.cc  06_getline.cc  07_hexify.cc  08_multidim.cc  09_ptr_traversal2.cc  10_square.cc  11_strcompare.cc  12_string_add.cc  13_string_io.cc  14_string_io2.cc  15_string_size.cc  16_string_size2.cc  17_string_size3.cc  18_vec_decls.cc  19_vecScores.cc  20_vecString2.cc  21_vecSubs.cc  22_word_echo.cc  CMakeLists.txt
CPP_Primer_5th/04_expression/: 01_arith-ex.cc  02_arraysizeof.cc  03_cond.cc  04_incr.cc  05_int-div.cc  06_oofe.cc  07_overflow.cc  08_prec.cc  09_shit-prec.cc  10_sizeof_pgm.cc  11_unaryOps.cc  12_vec_init.cc  13_warn_dbltoint.cc  CMakeLists.txt
CPP_Primer_5th/05_statement/: 01_add_item2.cc  02_doWhile.cc  03_guess.cc  04_ifgrades.cc  05_othercnt.cc  06_rangefor.cc  07_vowels.cc  CMakeLists.txt
CPP_Primer_5th/06_function/: 01_arrRet.cc  02_count-calls.cc  03_errMsg_initList.cc  04_fact.cc  05_mainmath.cc  06_mainret.cc  07_mk_plural.cc  08_ref-fcn.cc  09_refparms.cc  10_refret-ex.cc  11_reset.cc  12_stl_arr_fcns.cc  13_use_mk_plural.cc  14_usefcnptr.cc  15_wdebug.cc  CMakeLists.txt  LocalMath.cc  LocalMath.h
CPP_Primer_5th/07_class/: 01_add_item.cc  02_avg_price.cc  03_useAccount.cc  04_useDebug.cc  05_useScreen.cc  Account.cc  Account.h  CMakeLists.txt  Debug.cc  Debug.h  Screen.h  WindowMgr.h
CPP_Primer_5th/08_IO_library/: 01_add_item.cc  02_add_item2.cc  03_buf.cc  04_clearIO.cc  05_fileIO.cc  06_sstream.cc  CMakeLists.txt
CPP_Primer_5th/09_sequential_containers/: 01_capacity.cc  02_erase1.cc  03_erase2.cc  04_find_ops.cc  05_find_str.cc  06_refreshlter.cc  07_stack.cc  08_str_assignOps.cc  09_substr.cc  10_useConvs.cc  CMakeLists.txt
CPP_Primer_5th/10_generic_algorithm/: 01_absInt.cc  02_accum.cc  03_accum4.cc  04_avg_price.cc  05_bind2.cc  06_elimDups.cc  07_equal.cc  08_equiv_istream_iter.cc  09_inserts.cc  10_iostream_iter.cc  11_lambda.cc  12_newcount_size.cc  13_ostreamIter2.cc  14_rcomma.cc  15_rev_iters.cc  16_reverse_iter.cc  17_reverse.cc  18_sortSI.cc  19_use_find.cc  20_use_istream_iter.cc  CMakeLists.txt
CPP_Primer_5th/10_generic_algorithm/data/: outFile1  outFile3
CPP_Primer_5th/11_associative_container/: 01_erasemap.cc  02_map1.cc  03_multimap.cc  04_pair.cc  05_restricted_count.cc  06_setOps.cc  07_unorderedWordCount.cc  08_wcEx.cc  09_word_count.cc  10_word_transform.cc  CMakeLists.txt
CPP_Primer_5th/12_dynamic_memory/: 01_allocPtr.cc  02_allocSP.cc  03_oknew.cc  04_querymain.cc  05_unique.cc  06_UP.cc  07_usealloc.cc  08_usealloc2.cc  09_useBlob.cc  10_weak.cc  CMakeLists.txt  Foo.h  QueryResult.h  StrBlob.h  TextQuery.cc
CPP_Primer_5th/13_copy_control/: 01_copyNoMove.cc  02_FolderMain.cc  03_HasPtrlCount.cc  04_HasPtrValueLike.cc  05_moveHP.cc  06_serial.cc  07_StrFolderMain.cc  08_substr.cc  09_useStrVec.cc  CMakeLists.txt  Folder.cc  Folder.h  StrFolder.cc  StrFolder.h  StrVec.cc  StrVec.h  String.cc  String.h
CPP_Primer_5th/14_overload_typeConversion/: 01_absInt.cc  02_add.cc  03_calc.cc  04_directcall.cc  05_fcnobj.cc  06_newcount_size.cc  07_readStr.cc  CMakeLists.txt  Sales_data.cc  Sales_data.h
CPP_Primer_5th/15_object_oriented_programming/: 01_and_orQueryTest.cc  02_andQueryTest.cc  03_Basket_main.cc  04_sample.cc  05_scope.cc  06_useQuote.cc  07_vecBasket.cc  08_virtualsNscope.cc  09_wordQueryTest.cc  Basket.cc  Basket.h  CMakeLists.txt  Query.cc  Query.h  Quote.cc  Quote.h  get_print.cc
CPP_Primer_5th/16_templates_generic_programming/: 01_array-parms4.cc  02_Array.cc  03_compare.cc  04_compareDef.cc  05_compareSpec.cc  06_debug.cc  07_expansion.cc  08_flip.cc  09_multiset.cc  10_overSpec.cc  11_qm.cc  12_SP.cc  13_special.cc  14_trail-ret.cc  15_typealias.cc  16_useBlob.cc  17_useChcking.cc  18_variadic.cc  19_variadic3.cc  20_Vecmain.cc  Blob.h  CMakeLists.txt  DebugDelete.h  Vec.h  build.cc  compare.h  debug_rep.h
CPP_Primer_5th/17_standard_library_special_facilities/: 01_badgetc.cc  02_bits.cc  03_ccpgms.cc  04_findbook.cc  05_game.cc  06_getc.cc  07_getput.cc  08_manips.cc  09_manips11.cc  10_no_skipws.cc  11_normalInts.cc  12_phones.cc  13_phonesFinal.cc  14_point.cc  15_prec.cc  16_rand1.cc  17_rand2.cc  18_rand4.cc  19_rand6.cc  20_REerrs.cc  21_regex1.cc  22_sci_dec.cc  23_seed.cc  24_seek.cc  25_setw.cc  26_skipws.cc  27_subexpr.cc  28_tuple.cc  29_validatePhones.cc  30_zips.cc  CMakeLists.txt
CPP_Primer_5th/17_standard_library_special_facilities/data/: copyOut
CPP_Primer_5th/18_tool_for_large_program/: 01_Animal.cc  02_book.cc  03_class.cc  04_ex_over.cc  05_inherit.cc  06_mi_scope.cc  07_over.cc  08_over2.cc  09_spec.cc  10_usingDirective.cc  11_virt_inherit.cc  Animal.h  Animal_virtual_baseVers.h  CMakeLists.txt  bookexcept.h
CPP_Primer_5th/19_special_tool_and_tech/: 01_bitfields.cc  02_calc.cc  03_dyn_cast.cc  04_enum_match.cc  05_enum.cc  06_memFN_bind.cc  07_tok2.cc  08_typeid.cc  09_useScreen.cc  CMakeLists.txt  Screen.cc  Screen.h  TextQuery.h  Token.h
Effective_C++_3e/: 01_view_cpp_as_a_federation_of_languages.cpp  02_prefer_const_enums_and_inline_to_define.cpp  03_use_const_whenever_possible.cpp  04_make_sure_that_objects_are_initialized_before_they_used.cpp  05_know_what_functions_cpp_silently_writes_and_calls.cpp  06_disallow_functions.cpp  11_handle_assignment_to_self_in_operator.cpp  (+50 more)
(+226 files in other folders)
