
cmake_minimum_required(VERSION 3.5 FATAL_ERROR)

project(recipe-01 LANGUAGES CXX)

include_directories(../)

add_executable(01_main_only 01_main_only.cc)
add_executable(02_add 02_add.cc)
add_executable(03_whilecount 03_whilecount.cc)
add_executable(04_for_ex 04_for_ex.cc)
add_executable(05_mysum 05_mysum.cc)
add_executable(06_forcount 06_forcount.cc)
add_executable(07_item_io 07_item_io.cc)
add_executable(08_add_item 08_add_item.cc)
add_executable(09_add_item2 09_add_item2.cc)
add_executable(10_avg_price 10_avg_price.cc)
add_executable(11_occurs 11_occurs.cc)
