
cmake_minimum_required(VERSION 3.5 FATAL_ERROR)

project(recipe-01 LANGUAGES CXX)

include_directories(../)

add_executable(01_compounddecls 01_compounddecls.cc)
add_executable(02_convs 02_convs.cc)
add_executable(03_dbl_ptr 03_dbl_ptr.cc)
add_executable(04_decl-ex 04_decl-ex.cc)
add_executable(05_escape 05_escape.cc)
add_executable(06_inits 06_inits.cc)
add_executable(07_literals 07_literals.cc)
add_executable(08_ref-ex 08_ref-ex.cc)
add_executable(09_Sales_data 09_Sales_data.cc)
add_executable(10_scope_levels 10_scope_levels.cc)
add_executable(11_unsigned 11_unsigned.cc)
