
cmake_minimum_required(VERSION 3.5 FATAL_ERROR)

project(recipe-01 LANGUAGES CXX)

include_directories(../)

add_executable(01_add_item2 01_add_item2.cc)
add_executable(02_doWhile 02_doWhile.cc)
add_executable(03_guess 03_guess.cc)
add_executable(04_ifgrades 04_ifgrades.cc)
add_executable(05_othercnt 05_othercnt.cc)
add_executable(06_rangefor 06_rangefor.cc)
add_executable(07_vowels 07_vowels.cc)
