
cmake_minimum_required(VERSION 3.5 FATAL_ERROR)

project(recipe-01 LANGUAGES CXX)

include_directories(../)

add_executable(01_capacity 01_capacity.cc)
add_executable(02_erase1 02_erase1.cc)
add_executable(03_erase2 03_erase2.cc)
add_executable(04_find_ops 04_find_ops.cc)
add_executable(05_find_str 05_find_str.cc)
add_executable(06_refreshlter 06_refreshlter.cc)
add_executable(07_stack 07_stack.cc)
add_executable(08_str_assignOps 08_str_assignOps.cc)
add_executable(09_substr 09_substr.cc)
add_executable(10_useConvs 10_useConvs.cc)
