
cmake_minimum_required(VERSION 3.5 FATAL_ERROR)

project(recipe-01 LANGUAGES CXX)

# include_directories(../)

add_executable(01_absInt 01_absInt.cc)
add_executable(02_add 02_add.cc)
add_executable(03_calc 03_calc.cc)
add_executable(04_directcall 04_directcall.cc Sales_data.cc)
add_executable(05_fcnobj 05_fcnobj.cc)
add_executable(06_newcount_size 06_newcount_size.cc)
add_executable(07_readStr 07_readStr.cc)
