
cmake_minimum_required(VERSION 3.5 FATAL_ERROR)

project(recipe-01 LANGUAGES CXX)

include_directories(../)

add_executable(01_Animal 01_Animal.cc)

# add_executable(02_book 02_book.cc Sales_data.cc)


add_executable(03_class 03_class.cc)
add_executable(04_ex_over 04_ex_over.cc)
add_executable(05_inherit 05_inherit.cc)

add_executable(06_mi_scope 06_mi_scope.cc)
add_executable(07_over 07_over.cc)

add_executable(08_over2 08_over2.cc)
add_executable(09_spec.cc 09_spec)

add_executable(10_usingDirective 10_usingDirective.cc)
add_executable(11_virt_inherit 11_virt_inherit.cc)
# add_executable(12_phones 12_phones.cc)
# add_executable(13_phonesFinal 13_phonesFinal.cc)
# add_executable(14_point 14_point.cc)
# add_executable(15_prec 15_prec.cc)
# add_executable(16_rand1 16_rand1.cc)
# add_executable(17_rand2 17_rand2.cc)
# add_executable(18_rand4 18_rand4.cc)
# add_executable(19_rand6 19_rand6.cc)
# add_executable(20_REerrs 20_REerrs.cc)
# add_executable(21_regex1 21_regex1.cc)
# add_executable(22_sci_dec 22_sci_dec.cc)
# add_executable(23_seed 23_seed.cc)
# add_executable(24_seek 24_seek.cc)
# add_executable(25_setw 25_setw.cc)
# add_executable(26_skipws 26_skipws.cc)
# add_executable(27_subexpr 27_subexpr.cc)
# add_executable(28_tuple 28_tuple.cc)
# add_executable(29_validatePhones 29_validatePhones.cc)
# add_executable(30_zips 30_zips.cc)
